resources/tests/files/ok/GenericArrayArg.krna


fn f<T>(a: [T]) {

}