resources/tests/files/fail/FunctionTypesWrongReturn.krna


fn f() {

    let t = fn(ref: string) -> string Boolean.valueOf(ref)

}


